Grid template area use commit 2

--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,7 @@ body {
 
 @media (max-width: 768px) {
   .grid-container{
+    gap: 20px;
     grid-template-rows: auto;
     grid-template-areas: 
   
